# mcp-toolkit

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
mcp-stdio/: Cargo.toml
src/: api.ts
src-tauri/src/: lib.rs  projects.rs  router_mcp.rs  storage.rs
src/pages/: McpCatalog.tsx  RouterStatus.tsx
